<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title"
        android:textAppearance="@style/HeaderOneStyleCool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:contentPadding="34dp"
        app:contentPaddingBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintVertical_bias="0.32999998">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--    <EditText-->
            <!--        android:id="@+id/first_name_edit"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_marginTop="76dp"-->
            <!--        android:ems="10"-->
            <!--        android:hint="@string/first_name"-->
            <!--        android:inputType="textPersonName"-->
            <!--        app:layout_constraintEnd_toEndOf="parent"-->
            <!--        app:layout_constraintHorizontal_bias="0.452"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/title_text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.452"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--    <EditText-->
            <!--        android:id="@+id/last_name_edit"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_marginTop="32dp"-->
            <!--        android:ems="10"-->
            <!--        android:hint="@string/last_name"-->
            <!--        android:inputType="textPersonName"-->
            <!--        app:layout_constraintEnd_toEndOf="@+id/first_name_edit"-->
            <!--        app:layout_constraintHorizontal_bias="0.0"-->
            <!--        app:layout_constraintStart_toStartOf="@+id/first_name_edit"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/first_name_edit" />-->


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/last_name_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/first_name_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/first_name_edit"
                app:layout_constraintTop_toBottomOf="@+id/first_name_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/polite_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/politness"
                app:layout_constraintStart_toStartOf="@+id/last_name_edit"
                app:layout_constraintTop_toBottomOf="@+id/last_name_edit" />

            <Button
                android:id="@+id/generate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/generate"
                app:layout_constraintEnd_toEndOf="@+id/last_name_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/last_name_edit"
                app:layout_constraintTop_toBottomOf="@+id/polite_switch" />

            <TextView
                android:id="@+id/greeting_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAppearance="@style/CustomGreetingStyle"
                app:layout_constraintEnd_toEndOf="@+id/generate_button"
                app:layout_constraintStart_toStartOf="@+id/generate_button"
                app:layout_constraintTop_toBottomOf="@+id/generate_button"
                tools:text="Hallo! Wie gehts?" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>